[package]
name = "rcas"
version = "0.1.0"
authors = ["mov-rax <58199799+mov-rax@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.7.0"
plotters = { git = "https://github.com/38/plotters", default_features = false, features = ["evcxr", "line_series"] }
fltk = "0.10.10"
clipboard = "0.5.0"
eval = "0.4.3"
evalexpr = "5"

[profile.release]
lto = true