[package]
name = "rcas"
version = "0.1.0"
authors = ["mov-rax <58199799+mov-rax@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.7.0"
plotters = "0.3.0"
clipboard = "0.5.0"
statrs = "0.13.0"
nalgebra = "0.23.1"
fxhash = "0.2.1"
glu-sys = "0.1.4"

[dependencies.fltk]
version = "0.11.6"
features = ["enable-glwindow"]


[profile.release]
lto = true